<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order">

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="413dp"
        android:layout_height="95dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_background" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/order"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView26" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="409dp"
        android:layout_height="154dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cartbackground"
        tools:layout_editor_absoluteY="105dp" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="90dp"
        android:layout_height="129dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/carnationgold"
        tools:layout_editor_absoluteY="117dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="176dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/carnation_apple_gold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView28"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toTopOf="@+id/imageView28" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:text="@string/rm_32_00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView28"
        app:layout_constraintEnd_toEndOf="@+id/imageView28"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/imageView26"
        app:layout_constraintVertical_bias="0.907" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="438dp"
        android:layout_height="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cartbackground"
        tools:layout_editor_absoluteY="242dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="109dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView28"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ecoGold" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="146dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:text="@string/ecobrown_s_gold_order"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView30" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="382dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="76dp"
        android:layout_height="22dp"
        android:text="@string/rm40_00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView30"
        app:layout_constraintVertical_bias="0.239" />

</androidx.constraintlayout.widget.ConstraintLayout>